# AI_solo_coder_task_B_032

./: .env.example  .gitignore  README.md  docker-compose.yml  mosquitto.conf  nginx.conf
backend/: .dockerignore  Cargo.toml  Dockerfile  model_config.json
backend/src/: aging_classifier.rs  alarm_sender.rs  alert_manager.rs  anomaly_detector.rs  api.rs  capacity_predictor.rs  cell_grouping.rs  cell_matcher.rs  config.rs  data_pipeline.rs  database.rs  degradation_analyzer.rs  electrolyte_optimizer.rs  main.rs  mes_connector.rs  mes_integrator.rs  messages.rs  metrics.rs  models.rs  mqtt_client.rs  mqtt_collector.rs  prediction.rs  stage_detector.rs
clickhouse/: config.xml  init.sql
emqx/: emqx.conf
frontend/: app.js  cabinet_panel.js  channel_detail.js  electrolyte.js  grouping.js  index.html  mes.js  styles.css
frontend/components/: agingClassifier.js  cellMatcher.js  electrolyteOptimizer.js  mesConnector.js
grafana/datasources/: datasources.yml
prometheus/: prometheus.yml
simulator/: Dockerfile  cabinet_simulator.py  requirements.txt
