[package]
name = "battery-monitor"
version = "1.0.0"
edition = "2021"
description = "锂电池化成工艺监控与容量预测系统"
authors = ["Battery Monitor Team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rumqttc = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = { version = "0.12", features = ["derive", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "compression-gzip", "trace", "metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde_repr = "0.1"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
